fix select organization mobile 4

--- a/src/app/features/organizations/pages/organization-list/organization-list.page.css
+++ b/src/app/features/organizations/pages/organization-list/organization-list.page.css
@@ -180,3 +180,6 @@ td.mat-mdc-cell {
   max-width: 90vw !important;
   width: auto !important;
 }
+.mat-mdc-option mdc-list-item mat-mdc-option-active-ripple {
+  color: white !important;
+}
